:skull: Fix bug that chart layout is collapsed

--- a/src/app/components/summary/summary.css
+++ b/src/app/components/summary/summary.css
@@ -1,5 +1,6 @@
 md-sidenav {
     padding: 10px;
+    min-width: 250px;
 }
 
 md-sidenav-container {
